//package com.example.farmerama;
//
//
//import static androidx.test.espresso.Espresso.onView;
//import static androidx.test.espresso.action.ViewActions.click;
//import static androidx.test.espresso.assertion.ViewAssertions.matches;
//import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
//import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
//import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
//import static androidx.test.espresso.matcher.ViewMatchers.withId;
//import static androidx.test.espresso.matcher.ViewMatchers.withParent;
//import static androidx.test.espresso.matcher.ViewMatchers.withText;
//import static org.hamcrest.Matchers.allOf;
//import static org.hamcrest.Matchers.is;
//
//import android.view.View;
//import android.view.ViewGroup;
//import android.view.ViewParent;
//
//import androidx.test.espresso.ViewInteraction;
//import androidx.test.filters.LargeTest;
//import androidx.test.rule.ActivityTestRule;
//import androidx.test.runner.AndroidJUnit4;
//
//import org.hamcrest.Description;
//import org.hamcrest.Matcher;
//import org.hamcrest.TypeSafeMatcher;
//import org.junit.Rule;
//import org.junit.Test;
//import org.junit.runner.RunWith;
//
//@LargeTest
//@RunWith(AndroidJUnit4.class)
//public class DrawerFragmentTest {
//
//    @Rule
//    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);
//
//    @Test
//    public void drawerFragmentTest() {
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(500);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction materialButton = onView(
//                allOf(withId(R.id.continueAsGuest), withText("Continue as a guest"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
//                                        0),
//                                4),
//                        isDisplayed()));
//        materialButton.perform(click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(700);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton = onView(
//                allOf(withContentDescription("Open navigation drawer"),
//                        childAtPosition(
//                                allOf(withId(R.id.toolbar),
//                                        childAtPosition(
//                                                withId(R.id.constraintLayout),
//                                                0)),
//                                1),
//                        isDisplayed()));
//        appCompatImageButton.perform(click());
//
//        ViewInteraction navigationMenuItemView = onView(
//                allOf(withId(R.id.employeesFragment),
//                        childAtPosition(
//                                allOf(withId(androidx.appcompat.R.id.design_navigation_view),
//                                        childAtPosition(
//                                                withId(R.id.nav_view),
//                                                0)),
//                                4),
//                        isDisplayed()));
//        navigationMenuItemView.perform(click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(160);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton2 = onView(
//                allOf(withContentDescription("Open navigation drawer"),
//                        childAtPosition(
//                                allOf(withId(R.id.toolbar),
//                                        childAtPosition(
//                                                withId(R.id.constraintLayout),
//                                                0)),
//                                1),
//                        isDisplayed()));
//        appCompatImageButton2.perform(click());
//
//        ViewInteraction navigationMenuItemView2 = onView(
//                allOf(withId(R.id.areasFragment),
//                        childAtPosition(
//                                allOf(withId(androidx.appcompat.R.id.design_navigation_view),
//                                        childAtPosition(
//                                                withId(R.id.nav_view),
//                                                0)),
//                                5),
//                        isDisplayed()));
//        navigationMenuItemView2.perform(click());
//
//        ViewInteraction appCompatImageButton3 = onView(
//                allOf(withContentDescription("Open navigation drawer"),
//                        childAtPosition(
//                                allOf(withId(R.id.toolbar),
//                                        childAtPosition(
//                                                withId(R.id.constraintLayout),
//                                                0)),
//                                1),
//                        isDisplayed()));
//        appCompatImageButton3.perform(click());
//
//        ViewInteraction navigationMenuItemView3 = onView(
//                allOf(withId(R.id.employeeAreasFragment),
//                        childAtPosition(
//                                allOf(withId(androidx.appcompat.R.id.design_navigation_view),
//                                        childAtPosition(
//                                                withId(R.id.nav_view),
//                                                0)),
//                                6),
//                        isDisplayed()));
//        navigationMenuItemView3.perform(click());
//
//        ViewInteraction appCompatImageButton4 = onView(
//                allOf(withContentDescription("Open navigation drawer"),
//                        childAtPosition(
//                                allOf(withId(R.id.toolbar),
//                                        childAtPosition(
//                                                withId(R.id.constraintLayout),
//                                                0)),
//                                1),
//                        isDisplayed()));
//        appCompatImageButton4.perform(click());
//
//        ViewInteraction navigationMenuItemView4 = onView(
//                allOf(withId(R.id.registerFragment),
//                        childAtPosition(
//                                allOf(withId(androidx.appcompat.R.id.design_navigation_view),
//                                        childAtPosition(
//                                                withId(R.id.nav_view),
//                                                0)),
//                                7),
//                        isDisplayed()));
//        navigationMenuItemView4.perform(click());
//
//        ViewInteraction appCompatImageButton5 = onView(
//                allOf(withContentDescription("Open navigation drawer"),
//                        childAtPosition(
//                                allOf(withId(R.id.toolbar),
//                                        childAtPosition(
//                                                withId(R.id.constraintLayout),
//                                                0)),
//                                1),
//                        isDisplayed()));
//        appCompatImageButton5.perform(click());
//
//        ViewInteraction navigationMenuItemView5 = onView(
//                allOf(withId(R.id.accountFragment),
//                        childAtPosition(
//                                allOf(withId(androidx.appcompat.R.id.design_navigation_view),
//                                        childAtPosition(
//                                                withId(R.id.nav_view),
//                                                0)),
//                                2),
//                        isDisplayed()));
//        navigationMenuItemView5.perform(click());
//
//        ViewInteraction appCompatImageButton6 = onView(
//                allOf(withContentDescription("Open navigation drawer"),
//                        childAtPosition(
//                                allOf(withId(R.id.toolbar),
//                                        childAtPosition(
//                                                withId(R.id.constraintLayout),
//                                                0)),
//                                1),
//                        isDisplayed()));
//        appCompatImageButton6.perform(click());
//
//        ViewInteraction viewGroup = onView(
//                allOf(withId(R.id.linearLayout2),
//                        withParent(allOf(withId(androidx.appcompat.R.id.navigation_header_container),
//                                withParent(withId(androidx.appcompat.R.id.design_navigation_view)))),
//                        isDisplayed()));
//        viewGroup.check(matches(isDisplayed()));
//
//        ViewInteraction viewGroup2 = onView(
//                allOf(withId(R.id.linearLayout2),
//                        withParent(allOf(withId(androidx.appcompat.R.id.navigation_header_container),
//                                withParent(withId(androidx.appcompat.R.id.design_navigation_view)))),
//                        isDisplayed()));
//        viewGroup2.check(matches(isDisplayed()));
//    }
//
//    private static Matcher<View> childAtPosition(
//            final Matcher<View> parentMatcher, final int position) {
//
//        return new TypeSafeMatcher<View>() {
//            @Override
//            public void describeTo(Description description) {
//                description.appendText("Child at position " + position + " in parent ");
//                parentMatcher.describeTo(description);
//            }
//
//            @Override
//            public boolean matchesSafely(View view) {
//                ViewParent parent = view.getParent();
//                return parent instanceof ViewGroup && parentMatcher.matches(parent)
//                        && view.equals(((ViewGroup) parent).getChildAt(position));
//            }
//        };
//    }
//}
